cmake_minimum_required(VERSION 3.15)
project(zzz)

set(CMAKE_CXX_STANDARD 14)

add_executable(zzz main.cpp a.h b.h sizeof_test.h stl_test/String_test.h full_string.h
        test_oop/constructor_test.h
        Lt53_jzoff.h
        stl_test/test_vector.h
        testGenericProgramming/testGeneric2.h

        )